--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<!DOCTYPE html><html><head><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" /><meta charset="utf-8" /><meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport" /><title>Welcome to Middleman</title><link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css" /><link href="./stylesheets/site.css" rel="stylesheet" /></head><body class="index"><div id="teacher-screen-container"></div><div id="remote-container"></div><div id="local-container"></div><div id="user-id-label"></div><script src="https://cloud.apizee.com/apiRTC/apiRTC-latest.min.js" type="text/javascript"></script><script src="./javascripts/all.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+        name="viewport" />
+    <title>Welcome to Middleman</title>
+    <link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css" />
+    <link href="./stylesheets/bootstrap.css" rel="stylesheet" />
+    <link href="./stylesheets/site.css" rel="stylesheet" />
+    <link href="https://cdn.firebase.com/libs/firechat/3.0.1/firechat.min.css" rel="stylesheet" />
+</head>
+
+<body class="index">
+    <div class="main container-fluid">
+        <div class="row">
+            <div class="col-9 video-block">
+                <div class="teacher-cam-container" id="teacher-cam-container"></div>
+                <div class="teacher-screen-container" id="teacher-screen-container"></div>
+                <div class="student-screens-container" id="student-screens-container"></div>
+                <div id="local-container"></div>
+                <div id="user-id-label"></div>
+                <div class="operation-buttons-container" id="operation-buttons-container"><button
+                        id="call-btn">Call</button></div>
+                <div id="calling-media-container" style="display:none;"></div>
+            </div>
+            <div class="col-3 chat-block" style="height: 100%; background:#eee;">
+                <div class="messages-container-wrapper">
+                    <div class="messages-container" id="messages-container"></div>
+                </div><input class="message-input form-control" id="message-input" placeholder="請輸入訊息" />
+            </div>
+        </div>
+    </div>
+    <div id="call-container"></div>
+    <script crossorigin="anonymous" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firechat/3.0.1/firechat.min.js"></script>
+    <script src="https://cloud.apizee.com/apiRTC/v4.3/apiRTC-latest.min.js" type="text/javascript"></script>
+    <script src="./javascripts/all.js"></script>
+</body>
+
+</html>
